<resources>
    <string name="app_name">MaterialHunter</string>
    <string name="app_nav_home_label">MaterialHunter</string>
    <string name="materialhunter_sysinfo">System Information</string>
    <string name="materialhunter_description">You can ADD, DELETE, MOVE, SEARCH, BACKUP and RESET your custom command item. You can also long click on the item label to EDIT the item.</string>
    <string name="materialhunter_howtouse_cmd">Put your own command string here, it will be run in Android environment to get the output displayed.</string>
    <string name="materialhunter_howtouse_delimiter">Put your desired delimiter string if you want to split the output into lines, default is "\\n".</string>
    <string name="materialhunter_howtouse_runoncreate">To get the output upon the fragment is created, check this option.</string>
    <string name="materialhunter_run_item">RUN</string>
    <string name="materialhunter_move">Move: </string>
    <string name="materialhunter_add_title">Title:</string>
    <string name="materialhunter_add_command">Command:</string>
    <string name="materialhunter_add_delimiter">Line delimiter:</string>
    <string name="materialhunter_add_runoncreate">RunOnCreate</string>
    <string name="materialhunter_add_position">Position to insert:</string>
    <string name="hid_powersploit_description">The Powersploit payload provides you a choice of reverse meterpreter HTTP/S payloads. "URL to payload" should be a URL accessible to the victim machine where the larger payload is downloaded to.</string>
    <string name="hid_uac_bypass_item1">No UAC Bypass</string>
    <string name="ps_ip_address">IP Address (LHOST)</string>
    <string name="ps_port">Port (LPORT)</string>
    <string name="ps_payload_url">URL to payload</string>
    <string name="hid_ps_head">Powershell HTTP payload allows you to download and run a generic powershell payload from a URL. The URL to payload should be in a location accessible to the victim.</string>
    <string name="hid_windows_cmd_description">This Windows CMD payload allows you to enter raw commands to a Windows command prompt. Hitting the list menu will allow you to choose keyboard layout or UAC bypass options. </string>
    <string name="services_description">Chroot services can be started and stopped via the switch toggle buttons, you can also ADD, DELETE, MOVE, SEARCH, BACKUP, RESTORE and RESET your own service item, and long click on the item label to EDIT the item as well.</string>
    <string name="services_howto_startservice">To START a service in chroot, a command will be run INSIDE Chroot that looks like this:\n\nchroot &lt;chroot_folder> /usr/bin/sudo &lt;command_to_start_service>\n\nService is considered STARTED if the return value is 0 and vice versa.</string>
    <string name="services_howto_stopservice">To STOP a service in chroot, a command will be run INSIDE Chroot that looks like this:\n\nchroot &lt;chroot_folder> /usr/bin/sudo &lt;command_to_stop_service>\n\nService is considered STOPPED if the return value is 0 and vice versa.</string>
    <string name="services_howto_checkservice">To Check if a service in chroot is up or not, a command will be run OUTSIDE Chroot that looks like this:\n\nbusybox ps -o pid,comm | grep \'&lt;service_name>\'\n\nService is considered UP if the return value is 0 and vice versa.</string>
    <string name="services_howto_runServiceOnBoot">To automacticailly start the service after Chroot is up, check this option.</string>
    <string name="services_not_running">Service is NOT running.</string>
    <string name="services_run_on_chroot">RunOnChrootStart</string>
    <string name="services_move">Move: </string>
    <string name="custom_commands_description">You can ADD, DELETE, MOVE, SEARCH, BACKUP, RESTORE and RESET your custom command item. You can also long click on the item label to EDIT the item.</string>
    <string-array name="custom_commands_sendto_array">
        <item>android</item>
        <item>chroot</item>
    </string-array>
    <string-array name="custom_commands_execmode_array">
        <item>interactive</item>
        <item>background</item>
    </string-array>
    <string name="customcommands_send_to">Send to:</string>
    <string name="customcommands_exec_mode">Exec Mode:</string>
    <string name="customcommands_rob">RunOnBoot:</string>
    <string name="customcommands_move">Move: </string>
    <string name="drawertitleusbarmory">USB Arsenal</string>
    <string name="usbarmory_hint1_imagemounter">*Place all your .img or .iso files in "/sdcard/nh_files/diskimage/"</string>
    <string name="usbarmory_hint2_imagemounter">Select an .img or .iso file to mount</string>
    <string name="usbarmory_header">USB Function Selector</string>
    <string name="usbarmory_function">USB Function</string>
    <string name="usbarmory_adb">ADB</string>
    <string name="usbarmory_set_function">Set USB Function</string>
    <string name="usbarmory_save_config">SAVE CONFIG TO DATABASE</string>
    <string name="usbarmory_enabledfunctions">USB functions currently enabled:</string>
    <string name="usbarmory_imagemounter_header">Image Mounter</string>
    <string name="usbarmory_imagemounter_description">Image Mounter can be used only if the USB function \"mass_storage\" has been enabled</string>
    <string name="usbarmory_imagemounter_mount">Mount Image</string>
    <string name="usbarmory_imagemounter_unmount">Unmount Image</string>
    <string name="usbarmory_imagemounter_ro">Read Only</string>
    <string name="usbarmory_imagemounter_mounted">Mounted Image:</string>
    <string name="usbarmory_imagemounter_nonmounted">No image is mounted.</string>
    <string name="usbarmory_networktethering_header">USB Network Tethering</string>
    <string name="usbarmory_networktethering_description">USB Network Tethering can be used only if the USB function \"rndis\" or \"acmecm\" has been enabled</string>
    <string name="usbarmory_networktethering_attack_mode">Attack Mode:</string>
    <string name="usbarmory_networktethering_upstream">Upstream Interface (e.g. wlan0, rmnet_data0):</string>
    <string name="usbarmory_networktethering_interface">USB network interface\n(e.g. rndis0, usb0):</string>
    <string name="usbarmory_networktethering_target_ip">IP address to be assigned for target:</string>
    <string name="usbarmory_networktethering_your_ip">IP address for your USB Network Interface:</string>
    <string name="usbarmory_networktethering_mask">IP Subnet Mask (in Octet format):</string>
    <string name="usbarmory_networktethering_run">RUN IN NETHUNTER TERMINAL</string>
    <string name="usbarmory_networktethering_save_config">SAVE CONFIG TO DATABASE</string>
    <string name="usbarmory_target">Target</string>
    <string-array name="usbarmory_target_platform">
        <item>Windows</item>
        <item>Linux</item>
        <item>Mac OS</item>
    </string-array>
    <string-array name="usbarmory_usb_states_win_lin">
        <item>reset</item>
        <item>hid</item>
        <item>mass_storage</item>
        <item>rndis</item>
        <item>hid,mass_storage</item>
        <item>rndis,hid</item>
        <item>rndis,mass_storage</item>
        <item>rndis,hid,mass_storage</item>
    </string-array>
    <string-array name="usbarmory_usb_states_mac">
        <item>reset</item>
        <item>hid</item>
        <item>mass_storage</item>
        <item>acm,ecm</item>
        <item>hid,mass_storage</item>
        <item>acm,ecm,hid</item>
        <item>acm,ecm,mass_storage</item>
        <item>acm,ecm,hid,mass_storage</item>
    </string-array>
    <string-array name="usbarmory_usb_adb">
        <item>Enable</item>
        <item>Disable</item>
    </string-array>
    <string name="usbarmory_usb_adb_s">Enable</string>
    <string-array name="usbarmory_usb_network_attack_mode">
        <item>Network Tethering Only</item>
    </string-array>
    <string name="mana_hostapd">The hostapd configuration file used by Mana.</string>
    <string name="mana_hostapd_wpe">The hostapd configuration file used for 802.1x/EAP authentication attack (hostapd-wpe)  This is not used with MANA.</string>
    <string name="mana_hostapd_wpe_certs">Generate certificates (1st time only)</string>
    <string name="mana_dhcpd">The dhcpd configuration file used by Mana.</string>
    <string name="mana_dnsspoof">The dnsspoof configuration file used by Mana.</string>
    <string name="mana_nat_full">The Mana script that does full NAT &amp; SSL interception.</string>
    <string name="mana_nat_simple">The Mana script that does full NAT only.</string>
    <string name="mana_nat_simple_bdf">The Mana script that does full NAT &amp; BDFProxy HTTP routing to port 8080.</string>
    <string name="payload_select">Please select</string>
    <string name="source">Edit source</string>
    <string name="update">Update</string>
    <string name="load">Load from SDCARD</string>
    <string name="save">Save to SDCARD</string>
    <string name="payload">Payload</string>
    <string name="interface_select">Pick an interface:</string>
    <string name="mitmf_description">Written by @byt3bl33d3r, MITMf aims to provide a one-stop-shop for Man-In-The-Middle and network attacks while updating and improving existing attacks and techniques.</string>
    <string name="general_sett">General Settings</string>
    <string name="mitmf_javascriptkeylogger">JavaScript Keylogger</string>
    <string name="mitmf_browserprofiler">Browser Profiler</string>
    <string name="mitmf_filepwn">FilePWN (BDFPROXY) </string>
    <string name="mitmf_smbauth">SMB challenge-response auth attempts</string>
    <string name="mitmf_sslstripplus">SSLStrip+</string>
    <string name="mitmf_smbtrap">SMB trap</string>
    <string name="mitmf_appcache">App Cache Poison</string>
    <string name="mitmf_upsidedown">Enable Upsidedowninternet</string>
    <string name="mitmf_screenshotter">ScreenShotter</string>
    <string name="mitmf_FERRETNG">Enable Ferret-NG Cookie Capture Plugin</string>
    <string name="mitmf_Responder_Description">Responder allows you to poison LLMNR, NBT-NS and MDNS requests</string>
    <string name="mitmf_responder_sett">Responder Settings</string>
    <string name="mitmf_Responder">Enable Responder Plugin</string>
    <string name="mitmf_Responder_Analyze">Enable Analyze</string>
    <string name="mitmf_Responder_Wredir">Enable Wredir</string>
    <string name="mitmf_Responder_NBTNS">Enable NBTNS</string>
    <string name="mitmf_Responder_Fingerprint">Fingerprint Host</string>
    <string name="mitmf_Responder_LM">Force LM hash downgrade</string>
    <string name="mitmf_Responder_WPAD">WPAD Rogue Proxy Server</string>
    <string name="mitmf_enable_screenshotter">Enable ScreenShotter Plugin</string>
    <string name="mitmf_screenshotter_interval">Interval (in seconds) to screenshot:</string>
    <string name="pineapple_description">The pineapple connector is used in conjunction with the Hak5 Pineapple Nano and a USB OTG cable.   This helper will connect the Pineapple Nano over ethernet and upstream your wifi connection.</string>
    <string name="pineapple_gateway">Pineapple Gateway/Web Interface IP</string>
    <string name="pineapple_port">Pineapple Nano Web Port</string>
    <string name="pineapple_ip">Client IP</string>
    <string name="pineapple_cidr">Pineapple CIDR</string>
    <string name="pineapple_start_OTG">Setup Connection</string>
    <string name="pineapple_stop_OTG">Close Connection</string>
    <string name="pineapple_noupstream">No upstream</string>
    <string name="pineapple_transproxy">Forward port 80/443 to 8080/8083</string>
    <string name="pineapple_subnet">172.16.42.0/24</string>
    <string name="pineapple_webport">1471</string>
    <string name="pineapple_gatewayip">172.16.42.1</string>
    <string name="pineapple_clientip">172.16.42.42/24</string>
    <string name="bd_backup">Backup BD</string>
    <string name="bd_restore">Restore BD</string>
    <string name="bd_reset">Reset to Default</string>
</resources>