<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="4dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/pineapple_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pineapple_gateway"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/pineapple_gatewayip"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="15"
            android:maxLines="1"
            android:text="@string/pineapple_gatewayip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pineapple_port"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/pineapple_webport"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="5"
            android:maxLines="1"
            android:text="@string/pineapple_webport" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pineapple_ip"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/pineapple_clientip"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:digits="0123456789./"
            android:ems="10"
            android:maxLength="21"
            android:maxLines="1"
            android:text="@string/pineapple_clientip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pineapple_cidr"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/pineapple_cidr"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:digits="0123456789./"
            android:ems="10"
            android:maxLength="21"
            android:maxLines="1"
            android:text="@string/pineapple_subnet" />

        <CheckBox
            android:id="@+id/pineapple_noup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pineapple_noupstream" />

        <CheckBox
            android:id="@+id/pineapple_transproxy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pineapple_transproxy" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pineapple_start_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/pineapple_start_OTG" />

            <Button
                android:id="@+id/pineapple_close_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/pineapple_stop_OTG" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>