<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="material.hunter.MITMFViewModel" />
    </data>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/mitmf_Responder_Description" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10px"
                android:paddingBottom="20px"
                app:srcCompat="@android:drawable/divider_horizontal_bright" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_responder_sett"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/mitmf_responder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(view)->viewModel.responderClicked(view)}"
                android:text="@string/mitmf_Responder" />
            <!--android:checked="@={viewModel.responderChecked}"-->

            <CheckBox
                android:id="@+id/mitmf_responder_analyze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.responderChecked}"
                android:text="@string/mitmf_Responder_Analyze" />

            <CheckBox
                android:id="@+id/mitmf_responder_fingerprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.responderChecked}"
                android:text="@string/mitmf_Responder_Fingerprint" />

            <CheckBox
                android:id="@+id/mitmf_responder_LM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.responderChecked}"
                android:text="@string/mitmf_Responder_LM" />

            <CheckBox
                android:id="@+id/mitmf_responder_NBTNS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.responderChecked}"
                android:text="@string/mitmf_Responder_NBTNS" />

            <CheckBox
                android:id="@+id/mitmf_responder_WPAD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.responderChecked}"
                android:text="@string/mitmf_Responder_WPAD" />

            <CheckBox
                android:id="@+id/mitmf_responder_WREDIR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.responderChecked}"
                android:text="@string/mitmf_Responder_Wredir" />

        </LinearLayout>
    </ScrollView>
</layout>
