<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="material.hunter.MITMFViewModel" />
    </data>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/mitmf_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/interface_select"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/mitmf_interface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="4dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_sett"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10px"
                android:paddingBottom="5px"
                app:srcCompat="@android:drawable/divider_horizontal_bright" />

            <CheckBox
                android:id="@+id/mitmf_jskey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/mitmf_javascriptkeylogger" />

            <CheckBox
                android:id="@+id/mitmf_ferretng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/mitmf_FERRETNG" />

            <CheckBox
                android:id="@+id/mitmf_browserprofile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/mitmf_browserprofiler" />

            <CheckBox
                android:id="@+id/mitmf_filepwn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/mitmf_filepwn" />

            <CheckBox
                android:id="@+id/mitmf_smb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/mitmf_smbauth" />

            <CheckBox
                android:id="@+id/mitmf_smb_trap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/mitmf_smbtrap" />

            <CheckBox
                android:id="@+id/mitmf_sslstrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/mitmf_sslstripplus" />

            <CheckBox
                android:id="@+id/mitmf_app_poison"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/mitmf_appcache" />

            <CheckBox
                android:id="@+id/mitmf_upsidedown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/mitmf_upsidedown" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10px"
                android:paddingBottom="5px"
                app:srcCompat="@android:drawable/divider_horizontal_bright" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_screenshotter"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10px"
                android:paddingBottom="5px"
                app:srcCompat="@android:drawable/divider_horizontal_bright" />

            <CheckBox
                android:id="@+id/mitmf_screenshotter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/mitmf_enable_screenshotter" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mitmf_screenshotter_interval">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mitmf_screen_interval"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10px"
                android:paddingBottom="5px"
                app:srcCompat="@android:drawable/divider_horizontal_bright" />

        </LinearLayout>

    </ScrollView>
</layout>