<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:focusableInTouchMode="true">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hid_powersploit_description"
            android:layout_gravity="center_horizontal|center" 
            android:gravity="center"
            android:padding="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payload"
            android:padding="4dp"
            android:layout_marginTop="4dp" />

        <Spinner
            android:id="@+id/payload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:entries="@array/payloads"
            android:prompt="@string/payload_select" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ps_ip_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ipaddress"
                android:ems="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ps_port">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/port"
                android:ems="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ps_payload_url">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/payloadUrl"
                android:ems="10"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/powersploitOptionsUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update" />
    </LinearLayout>

</ScrollView>